Co-authored-by: msusanna002 <msusanna002@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "hash_table.h": "c"
+        "hash_table.h": "c",
+        "stdbool.h": "c"
     }
 }
