--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,16 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "hash_table.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "__locale": "c",
+        "__threading_support": "c",
+        "bitset": "c",
+        "optional": "c",
+        "string": "c",
+        "string_view": "c",
+        "system_error": "c",
+        "type_traits": "c",
+        "variant": "c",
+        "vector": "c"
     }
 }
