Co-authored-by: msusanna002 <msusanna002@users.noreply.github.com>

--- a/makeFile
+++ b/makeFile
@@ -31,7 +31,23 @@ linked_test.o: linked_test.c
 	
 freqtest: freq-count.o hashtable.o unit_tests.o linked_list.o common.o
 	gcc -g -Wall freq-count.c -lcunit hash_table.c linked_list.c common.c -o freqtest
-	
+
+memfreqtest: freqtest
+	valgrind --leak-check=full ./freqtest 16k-words.txt
+
 freq-count.o: freq-count.c common.h iterator.h linked_list.h hash_table.h
 	gcc -c -g -Wall freq-count.c
 
+hash_coverage: hashtable.o unit_tests.c linked_list.o common.o 
+	gcc -Wall -fprofile-arcs -ftest-coverage unit_tests.c -lcunit linked_list.c common.c hash_table.c -o hash_coverage
+
+list_coverage: hashtable.o linked_list.o common.o linked_test.c
+	gcc -Wall -fprofile-arcs -ftest-coverage linked_test.c -lcunit linked_list.c common.c hash_table.c -o link_coverage
+
+run_hash_cov: hash_coverage
+	./hash_coverage
+	gcov hash_coverage-hash_table.gcno
+
+run_link_cov: link_coverage
+	./link_coverage
+	gcov link_coverage-linked_list.gcno
